
- v1.0.1061                                 -
---------------------------------------------
- 2021-01-05                                -
---------------------------------------------
.: WSM: Task: Use scroll-x in categories to view a proper table (WSM-267)
.: WSM: Task: Clarify the pay button and letting merchant know they can wait user to upload payslip to update the invoice status (WSM-281)

- v1.0.1060                                 -
---------------------------------------------
- 2021-01-02                                -
---------------------------------------------
.: WSM: Task: Remove default item type form (WSM-263)

---------------------------------------------
- 2021-01-02                                -
---------------------------------------------
.: WSM: BugFix: Fixed minor issues in Invoice Module (WSM-250)
.: WSM: Task: Add input label in customers (WSM-253)
.: WSM: Task: Add input label in promotions (WSM-252)
.: WSM: BugFix: Set malaysia as default country (WSM-253)
.: WSM: Task: Category select all by default when open modify invoice modal (WSM-250)
.: WSM: Task: Remove default item type (WSM-263)

---------------------------------------------
- 2021-01-01                                -
---------------------------------------------
.: WSM: BugFix: Fixed existing promotion active date and expiry date issue (WSM-252)
.: WSM: BugFix: Fixed promotion active date  validation and lazyload (WSM-250)
.: WSM: Task: Show default price in item type (WSM-254)
.: WSM: BugFix: Update current page in invoice module (WSM-250)
.: WSM: BugFix: Show existing SKU message (WSM-255)

---------------------------------------------
- 2020-12-30                                -
---------------------------------------------
.: WSM: BugFix: Fixed multiselect dropdown jumping issue (WSM-251)
.: WSM: BugFix: Remove Item without moving to uncategoried (WSM-261)

---------------------------------------------
- 2020-12-29                                -