@@ -3,7 +3,7 @@
     <span class="fas fa-plus mr-2 d-inline-block"></span>Add New
 </button>
 <div class="clearfix mb-3"></div>
-<div class="d-flex align-items-center mb-4 pt-2 px-2" style="overflow-x: auto" *ngIf="!loading.isRunning(); else loadingTemplate">
+<div class="d-flex align-items-center mb-5 pt-2 px-2" style="overflow-x: auto" *ngIf="!loading.isRunning(); else loadingTemplate">
     <table class="table list-table">
         <thead style="background-color: #f7f7f7">
             <th class="border-top-0" style="width: 50px"></th>
