@@ -62,7 +62,7 @@
                 </button>
             </div>
             <div class="clearfix"></div>
-            <merchant-info style="display: block; min-height: calc(100vh - 317px)" *ngIf="selectedNav == 'info'" [store]="store"
+            <merchant-info style="display: block;" *ngIf="selectedNav == 'info'" [store]="store"
                 [isEditing]="true"
                 [banners]="editingBanners"
                 [profileImage]="editingProfileImage"
