@@ -8,6 +8,7 @@
 ---------------------------------------------
 .: WSM: Task: Use scroll-x in categories to view a proper table (WSM-267)
 .: WSM: Task: Clarify the pay button and letting merchant know they can wait user to upload payslip to update the invoice status (WSM-281)
+.: WSM: Task: Improvement: Mobile size store page (WSM-268)
 
 - v1.0.1060                                 -
 ---------------------------------------------
